# panpipes

./: .gitignore  0.80  64.0.0  CHANGELOG.md  CITATION.cff  LICENSE  README.md  R_libs_required.txt  ingestion-ci.yml  meta.yaml  pipeline.yml  pipeline_env.yaml  pyproject.toml  r_install_libraries.R  requirements.txt  requirements_minimal.txt  setup.cfg  setup.py
.github/: refmap-ci.yml
.github/workflows/: clustering-ci.yml  filtering-ci.yml  ingestion-ci.yml  integration-ci.yml  integration01-ci.yml  integration02-ci.yml  integration03-ci.yml  multiviintegration02-ci.yml  refmap-ci.yml  spatial-ci.yml  spatial_deconvolution-ci.yml  spatial_deconvolution_cell2location-ci.yml  spatial_deconvolution_tangram-ci.yml  spatial_ingestion_merfish-ci.yml  spatial_ingestion_merscope-ci.yml  spatial_ingestion_visium-ci.yml  spatial_ingestion_xenium.yml  spatial_preprocess-ci copy.yml  spatial_preprocess-ci.yml  spatial_preprocess_concat-ci.yml  visualization-ci.yml
.history/docs/: install_20230703124426.md  install_20230703125716.md  install_20230703125912.md  install_20230704103307.md  install_20230704103607.md  install_20230704104903.md  install_20230704115814.md  install_20230704115848.md
R/: install_R_libs.R  plotQC.R  plotclustree.R
docs/: Guide_to_annotation.ipynb  Guide_to_annotation.md  api.rst  cellranger_parsers.md  common_errors_rescomp.md  conf.py  contribute_guidelines.md  contributors.md  different_entry_points.md  filter_dict_instructions.md  gene_list_format.md  gene_list_format.rst  github_ssh_keys.md  index.rst  install.md  install.rst  installation_rescomp.md  plans.md  references.rst  release_notes.md  requirements.txt  set_up_ssh_keys_for_github.md  setup_for_ingest.md  setup_for_qc_mm.md  setup_for_qc_mm.rst  troubleshooting.md  usage.md  usage.rst
docs/components/: clustering.rst  integration.rst  preprocess.rst  qc.rst  refmap.rst  specifications.rst  vis.rst
docs/img/: integration_coloured.drawio.png:Zone.Identifier  integration_coloured.drawio.pngZone.Identifier
docs/pipeline_config_documentation/: pipeline_ingestion_yml.md
docs/source/: api.rst  conf.py
docs/tutorials/: Guide_to_annotation.ipynb  Guide_to_annotation.md  index.md
docs/usage/: Normalization methods.md  custom_genes_annotations.md  different_entry_points.md  filter_dict_instructions.md  gene_list_format.md  general_principles.md  index.md  integration_methods.md  normalization_methods.md  panpipes_scverse.md  sample_file_qc_mm.md  sample_file_qc_mm.txt  setup_for_qc_mm.md  setup_for_spatial_workflows.md  troubleshooting.md
docs/workflows/: clustering.md  clustering_spatial.md  deconvolute_spatial.md  index.rst  ingest_spatial.md  integration.md  pipeline_preprocess_preprint.yml  preprocess.md  preprocess_spatial.md  qc.md  refmap.md  vis.md
docs/yaml_docs/: index.rst  pipeline_clustering_yml.md  pipeline_ingestion_yml.md  pipeline_integration_ym.md  pipeline_integration_yml.md  pipeline_preprocess_yml.md  pipeline_refmap_yml.md  pipeline_visualization_yml.md  spatial_deconvolution.md  spatial_preprocess.md  spatial_qc.md  threads_tasks_panpipes.csv  threads_tasks_panpipes.md  threads_tasks_panpipes.xlsx  useful_info_on_yml.md
panpipes/: entry.py  funcs.py  meta.yaml  pipeline_clustering.py  pipeline_integration.py  pipeline_preprocess.py  pipeline_qc_mm.py  pipeline_refmap.py  pipeline_vis.py  version.py
panpipes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
panpipes/R_scripts/: install_R_libs.R  plotQC.R  plot_cluster_metrics.R  plot_metrics.R  plotclustree.R  produce_barplot_10xmetric.v3.R  refmap_wnn.R
panpipes/funcs/: io.py  plotting.py  processing.py  scmethods.py
panpipes/panpipes/: entry.py  install_R_libs.py  pipeline_clustering.py  pipeline_deconvolution_spatial.py  pipeline_ingest.py  pipeline_integration.py  pipeline_preprocess.py  pipeline_preprocess_spatial.py  pipeline_qc_mm.py  pipeline_qc_spatial.py  pipeline_refmap.py  pipeline_vis.py
panpipes/pipeline_clustering/: pipeline.yml
panpipes/pipeline_filtering/: pipeline.yml
panpipes/pipeline_integration/: pipeline.yml
panpipes/pipeline_preprocess/: pipeline.yml
panpipes/pipeline_qc_mm/: pipeline.yml
panpipes/python_scripts/: aggregate_cellranger_summary_metrics.py  aggregate_csvs.py  assess_background.py  batch_correct_bbknn.py  batch_correct_combat.py  batch_correct_harmony.py  batch_correct_merge.py  batch_correct_mofa.py  batch_correct_multivi.py  batch_correct_none.py  batch_correct_scanorama.py  batch_correct_scvi.py  batch_correct_totalvi.py  batch_correct_wnn.py  collate_mdata.py  concat_adata.py  concatenaton_spatial.py  downsample.py  generate_cellxgene.py  integrate_wnn.py  make_adata_from_csv.py  make_mudataspatial_from_csv.py  make_spatialData_from_csv.py  normalise_log_hvg_regress_scale.py  plot_atac_qc.py  plot_cluster_umaps.py  plot_custom_markers.py  plot_custom_markers_umap.py  plot_features_scatter.py  plot_pca.py  plot_qc_spatial.py  plot_qc_spatialT.py  plot_scanpy_markers.py  plot_tenx_metrics.py  plot_umaps_batch_correct.py  plot_variables_umaps.py  refmap_generatescanvi.py  refmap_plot_umaps.py  (+31 more)
python/: assess_background.py  batch_correct_harmony.py  batch_correct_merge.py  batch_correct_none.py  batch_correct_scvi.py  batch_correct_totalvi.py  batch_correct_wnn.py  collate_mdata.py  concat_adata.py  integrate_wnn.py  make_adata_from_csv.py  normalise_log_hvg_regress_scale.py  plot_cluster_umaps.py  plot_custom_markers.py  plot_custom_markers_umap.py  plot_umaps_batch_correct.py  refmap_plot_umaps.py  run_collate_mtd_files.py  run_filter.py  run_find_markers_multi.py  run_preprocess_atac.py  run_preprocess_prot.py  run_preprocess_rna.py  run_scanpyQC_ADT.py  run_scanpyQC_ATAC.py  run_scanpyQC_GEX.py  run_scanpyQC_REP.py  run_scanpyQC_rna.py
resources/: custom_gene_list_v2.tsv  demult_map.csv  demult_mtd.csv  exclude_genes_HLAIGTR_v1.txt  qc_genelist_1.0.csv  sample_file_qc_mm_gex_only.txt
tests/: check-package.py  helpers.py  pytest.ini  sample_caf.tsv  test_anndata.py  test_ingest_funcs.py  test_processing.py  test_qc_mm_funcs.py
(+39 files in other folders)
