
[metadata]
name = panpipes
version = 0.2.0
authors = 
    Charlotte Rich-Griffin
    Fabiola Curion
description = Panpipes - multimodal single cell pipelines
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: R


[options]
include_package_data = True
packages = find:
python_requires = >=3.7, <4
install_requires = 
    anndata>=0.8.0 
    apsw 
    bbknn 
    cgatcore 
    drmaa 
    harmonypy 
    leidenalg 
    louvain 
    matplotlib
    mofapy2 
    mudata @ git+https://github.com/scverse/mudata
    muon @ git+https://github.com/scverse/muon
    numpy>=1.22.4 
    packaging 
    pandas>=1.0 
    paramiko 
    pep8
    pysam
    pytest
    pyyaml
    ruffus 
    scanorama 
    scanpy>=1.9.1 
    seaborn
    scikit-misc 
    scirpy @ git+https://github.com/scverse/scirpy
    scrublet 
    scvi-tools>=0.16.3 
    sqlalchemy

[options.entry_points]
console_scripts =
    panpipes = panpipes.entry:main



[options.extras_require]
notebook = 
    jupyter
    jupyterlab
